Bug 1549288 - Clean up about:newinstall CSS and make it support dark mode. r=dao
Differential Revision: https://phabricator.services.mozilla.com/D37805

UltraBlame original commit: 6c6c0d39f1e9974d5498b27b530a898b2a73dbee

--- a/browser/themes/shared/newInstallPage.css
+++ b/browser/themes/shared/newInstallPage.css
@@ -73,6 +73,59 @@ height
 52px
 ;
 }
+supports
+-
+moz
+-
+bool
+-
+pref
+(
+"
+browser
+.
+in
+-
+content
+.
+dark
+-
+mode
+"
+)
+{
+media
+(
+prefers
+-
+color
+-
+scheme
+:
+dark
+)
+{
+#
+header
+>
+img
+{
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+currentColor
+;
+}
+}
+}
 #
 content
 {
@@ -231,9 +284,13 @@ var
 (
 -
 -
-grey
+in
 -
-50
+content
+-
+deemphasized
+-
+text
 )
 ;
 }
@@ -302,41 +359,6 @@ cursor
 :
 pointer
 ;
-padding
-:
-8px
-0
-;
-margin
-:
-0
-;
-color
-:
-#
-FFF
-!
-important
-;
-background
--
-color
-:
-var
-(
--
--
-blue
--
-50
-)
-;
-border
--
-radius
-:
-4px
-;
 }
 #
 sync
@@ -360,9 +382,13 @@ var
 (
 -
 -
-grey
+in
 -
-50
+content
+-
+deemphasized
+-
+text
 )
 ;
 margin
@@ -376,5 +402,11 @@ text
 align
 :
 start
+;
+margin
+-
+inline
+:
+4px
 ;
 }
